<resources>
    <string name="app_name">Freedom20</string>
    <string name="home">Home</string>
    <string name="explore">EXPLORE</string>
    <string name="post">Post</string>
    <string name="news">News</string>
    <string name="logs">Docs</string>
    <string name="profile">Profile</string>
    <string name="title_activity_web">WebActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--    navigatin drawer-->
    <string name="open">Open</string>
    <string name="Notif">Notifications</string>
    <string name="close">Close</string>
    <string name="email">adityasimant@gmail.com</string>
    <string name="facebook_page">Follow on Facebook</string>
    <string name="communication">Communication</string>
    <string name="nav_rate">Rate or Feedback</string>
    <string name="nav_share">Share</string>
    <string name="discover_people">Discover People</string>
    <string name="notification">Notifications</string>
    <string name="nav_terms_conditions">Terms and Conditions</string>
    <string name="website">Visit Website</string>
    <string name="Logout">Logout</string>
</resources>