<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/website"
            android:icon="@drawable/website"
            android:title="@string/website" />
    </group>
    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rate"
                android:title="@string/nav_rate" />
            <item
                android:id="@+id/notification"
                android:icon="@drawable/notification"
                android:title="@string/notification" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/discover_people"
                android:icon="@drawable/ic_baseline_people_24"
                android:title="@string/discover_people" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:title="@string/Logout" />
        </menu>
    </item>

</menu>